--- a/pom.xml
+++ b/pom.xml
@@ -321,6 +321,40 @@
 					</dependency>
 				</dependencies>
 			</plugin>
+			<!-- Compile OpenDJ embedded server -->
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>build-helper-maven-plugin</artifactId>
+				<version>3.6.0</version>
+				<executions>
+					<execution>
+						<id>add-source</id>
+						<phase>generate-sources</phase>
+						<goals>
+							<goal>add-source</goal>
+						</goals>
+						<configuration>
+							<sources>
+								<source>src/opendj/java</source>
+							</sources>
+						</configuration>
+					</execution>
+					<execution>
+						<id>add-resource</id>
+						<phase>generate-resources</phase>
+						<goals>
+							<goal>add-resource</goal>
+						</goals>
+						<configuration>
+							<resources>
+								<resource>
+									<directory>src/opendj/resources</directory>
+								</resource>
+							</resources>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 
 		</plugins>
 
@@ -656,101 +690,6 @@
 		</profile>
 
 		<profile>
-			<id>opendj</id>
-			<activation>
-				<activeByDefault>true</activeByDefault>
-			</activation>
-			<dependencies>
-				<dependency>
-					<groupId>org.forgerock.ce.opendj</groupId>
-					<artifactId>opendj-server</artifactId>
-					<version>2.6.4</version>
-					<scope>compile</scope>
-				</dependency>
-			</dependencies>
-			<build>
-				<resources>
-					<resource>
-						<directory>src/main/resources-filtered</directory>
-						<filtering>true</filtering>
-					</resource>
-					<resource>
-						<directory>src/main/resources</directory>
-						<filtering>false</filtering>
-					</resource>
-				</resources>
-				<plugins>
-					<plugin>
-						<groupId>org.codehaus.mojo</groupId>
-						<artifactId>build-helper-maven-plugin</artifactId>
-						<version>3.6.0</version>
-						<executions>
-							<execution>
-								<id>add-source</id>
-								<phase>generate-sources</phase>
-								<goals>
-									<goal>add-source</goal>
-								</goals>
-								<configuration>
-									<sources>
-										<source>src/opendj/java</source>
-									</sources>
-								</configuration>
-							</execution>
-							<execution>
-								<id>add-resource</id>
-								<phase>generate-resources</phase>
-								<goals>
-									<goal>add-resource</goal>
-								</goals>
-								<configuration>
-									<resources>
-										<resource>
-											<directory>src/opendj/resources</directory>
-										</resource>
-									</resources>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-antrun-plugin</artifactId>
-						<version>3.1.0</version>
-						<executions>
-							<execution>
-								<id>startLdapServer</id>
-								<phase>test-compile</phase>
-								<configuration>
-									<target unless="maven.test.skip">
-										<property name="execution.path" refid="maven.runtime.classpath" />
-										<ant antfile="${basedir}/misc/build-runldap.xml" target="startLdapServer" />
-									</target>
-								</configuration>
-								<goals>
-									<goal>run</goal>
-								</goals>
-							</execution>
-							<execution>
-								<id>stopLdapServer</id>
-								<phase>test</phase>
-								<configuration>
-									<target unless="maven.test.skip">
-										<property name="execution.path" refid="maven.runtime.classpath" />
-										<property name="plugin.path" refid="maven.plugin.classpath" />
-										<ant antfile="${basedir}/misc/build-runldap.xml" target="stopLdapServer" />
-									</target>
-								</configuration>
-								<goals>
-									<goal>run</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-		<profile>
 			<id>postgresql</id>
 			<activation>
 				<activeByDefault>false</activeByDefault>
@@ -813,6 +752,12 @@
 	</pluginRepositories>
 
 	<dependencies>
+		<dependency>
+			<groupId>org.forgerock.ce.opendj</groupId>
+			<artifactId>opendj-server</artifactId>
+			<version>2.6.4</version>
+			<scope>compile</scope>
+		</dependency>
 		<dependency>
 			<groupId>org.mybatis</groupId>
 			<artifactId>mybatis2</artifactId>
