--- a/src/install/debian/rules
+++ b/src/install/debian/rules
@@ -57,4 +57,8 @@ override_dh_install:
 		-e 's:^VAR_DIR.*:VAR_DIR="/var/lib/lsc":' \
 		-e 's:^HSQLDB_PIDFILE.*:HSQLDB_PIDFILE="/run/hsqldb.pid":' \
 		`pwd`/debian/lsc/usr/bin/hsqldb
-
+	# Sample
+	sed -i \
+		-e 's:^LSC_LIB_DIR=.*:LSC_LIB_DIR="/usr/lib/lsc":' \
+		-e 's:^LSC_BIN_DIR=.*:LSC_BIN_DIR="/usr/bin":' \
+		`pwd`/debian/lsc/usr/share/doc/lsc/hsqldb/bin/lsc-sample
