--- a/pom.xml
+++ b/pom.xml
@@ -157,9 +157,9 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.13.0</version>
 				<configuration>
-					<!--<source>21</source>
-					<target>21</target>
-					<compilerVersion>21</compilerVersion>-->
+					<source>11</source>
+					<target>11</target>
+					<compilerVersion>11</compilerVersion>
 					<encoding>utf-8</encoding>
 				</configuration>
 				<executions>
