--- a/pom.xml
+++ b/pom.xml
@@ -200,6 +200,13 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
 				<version>3.4.2</version>
+				<configuration>
+					<archive>
+						<manifestEntries>
+							<Implementation-Version>${version}</Implementation-Version>
+						</manifestEntries>
+					</archive>
+				</configuration>
 				<executions>
 					<execution>
 						<goals>
