--- a/src/install/debian/rules
+++ b/src/install/debian/rules
@@ -42,7 +42,7 @@ override_dh_install:
 	find debian/lsc -type f -name '*.bat' -delete
 	# Reconfigure files
 	## logback
-	sed -i -e 's:$${TMP_DIR}:/var/log/lsc:' \
+	sed -i -e 's:value="$${TMP_DIR}":value="/var/log/lsc":' \
 		`pwd`/debian/lsc/etc/lsc/logback.xml
 	## bin
 	sed -i \
